--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,5 +22,11 @@
             {{ form.remember_me.label }}
         </p>
         <p>{{ form.submit() }}</p>
+        <p>
+            New User? 
+            <a href="{{ url_for('register') }}">
+                Click to Register!
+            </a>
+        </p>
     </form>
 {% endblock %}
