--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,6 +1,12 @@
 <table>
-    <tr>
-        <td><img src="{{ post.author.avatar(36) }}" alt="avatar"></td>
-        <td>{{ post.author.username }} says: <br>{{ post.body }}</td>
+    <tr valign="top">
+        <td>
+            <img src="{{ post.author.avatar(36) }}" alt="avatar">
+        </td>
+        <td>
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                {{ post.author.username }}
+            </a> says: <br>{{ post.body }}
+        </td>
     </tr>
 </table>
