--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,5 +28,9 @@
                 Click to Register!
             </a>
         </p>
+        <p>
+            Forgot your password? 
+            <a href="{{ url_for('reset_password_request') }}">Click to reset it</a>
+        </p>
     </form>
 {% endblock %}
